--- a/index.html
+++ b/index.html
@@ -2,19 +2,44 @@
 <html>
 <head>
 <title>Hola</title>
+
+<style>
+	p{
+		/* aplicar colores al texto */
+
+		/*color: orangered;*/
+	}
+
+	h2{
+		/* aplicar colores al texto */
+
+		color: blueviolet;
+	}
+
+	
+</style>
+
+<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
-	<h1>hi</h1>
+	<h1 class="divPadding">HOLAA, PAGINA PROGRAMACION 4</h1>
+	
 	<bold>lorem<bold>
 	<script src="./script.js"></script>
 
 	<!-- formula matematica -->
-	<p>f<sub>(x)</sub> = 2x<sup>4</sup> + 3x<sup>3</sup> - 2x<sup>2</sup> + 5x - 3</p>
+	<p class="pDiferente">f<sub>(x)</sub> = 2x<sup>4</sup> + 3x<sup>3</sup> - 2x<sup>2</sup> + 5x - 3</p>
+	<p class="pDiferente">hola perras	</p>
+	<br><a class="negritaSemantica">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. </a>
 
-	<a href="https://www.unicesar.edu.co/">Pagina de la universidad</a>
+
+
+	<br>
+	<br><a class="negritaSemantica" href="https://www.unicesar.edu.co/">Pagina de la universidad</a>
 	<br/>
-	<a href="https://www.unicesar.edu.co/" target="blank">Pagina de la universidad, abre en otra pestaña</a>
+	<br><a href="https://www.unicesar.edu.co/" target="blank">Pagina de la universidad, abre en otra pestaña</a>
 
 	<h4>link imagen</h4>
 	<a href="/home/jesus/Downloads/Git/gitFrontEnd/img/imagen1.jpg" target="_blank">Imagen</a> 
@@ -23,6 +48,14 @@
 	<a href="paginas/contactos.html">Pagina de contactos</a>
 	<br>
 	<a href="paginas/servicios.html">Pagina de servicios</a>	
+
+	<div class="divRGBA">
+		<b>	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</b>
+	</div><br>
+
+	<div class="divHSL">
+		<b>	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</b>
+	</div>
 
 	<! -- listas -- >
 
@@ -97,12 +130,25 @@
 
 <audio src="audios/audio1.mp3" controls></audio>
 <h3> video local</h3>
-<video src="videos/video1.mp4" controls></video>
+<video src="videos/video1.mp4" controls style="width:50%"></video>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dX0CgkYJgbQ?si=IqVtXQQ_UHnSkJkg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5Mv5xoz08Mo?si=QERDEK72IeYSKifl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+<br><--- clase miercoles --->
+
+<br><p style="font-size: 22px; font-style: italic;">CSS3.</p>
+
+
+
+
+
+
+
 
 </div>
 
